<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PowerManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="device_number">设 备 号:</string>
    <string name="get_device_no">获取</string>
    <string name="user_no">用户工号:</string>
    <string name="user_passwd">用户密码:</string>
    <string name="online_mode">在线模式</string>
    <string name="offline_mode">离线模式</string>
    <string name="login">登    陆</string>
    <string name="exit">退    出</string>
    <string name="login_title">电力掌上营销</string>
    <string name="general_survey">计量普查</string>
    <string name="area_comb">台区梳理</string>
    <string name="exception_deal">异常消缺</string>
    <string name="un_submit_data">未提交信息</string>
    <string name="submit_data">已提交信息</string>
    <string name="assets_details">资产明细</string>
    <string name="combing_assets_details">计量箱资产明细</string>
    <string name="elimination_assets_details">异常消缺明细</string>
    <string name="device_type">设备类型</string>
    <string name="device_code">条形码</string>
    <string name="query_date">普查时间</string>
    <string name="please_select_district">请选择准备%1$s的台区</string>
    <string name="no_districts">没有台区可以%1$s</string>
    <string name="add_new">增加普查</string>
    <string name="add_new_elimination">增加消缺</string>
    <string name="del">删除</string>
    <string name="batch_submit">批量提交</string>
    <string name="back">返回</string>
    <string name="state">状态</string>
    <string name="state_survey">已普查</string>
    <string name="state_un_survey">未普查</string>
    <string name="state_new">新增</string>
    <string name="survey_order">抄表顺序号</string>
    <string name="user_number">用户编号</string>
    <string name="user_number_label">用户编号:</string>
    <string name="measure_no">计量点编号</string>
    <string name="measure_no_label">计量点编号:</string>
    <string name="meter_asset_no">电表资产号</string>
    <string name="meter_asset_no_label">电表资产号:</string>
    <string name="box_asset_no">计量箱资产号</string>
    <string name="row_no">所在行</string>
    <string name="row_no_label">所在行:</string>
    <string name="column_no">所在列</string>
    <string name="column_no_label">所在列:</string>
    <string name="bar_code">条形码</string>
    <string name="user_name">用户名称</string>
    <string name="user_name_label">用户名称:</string>
    <string name="address">用电地址</string>
    <string name="address_label">用电地址:</string>
    <string name="set_address">安装地址</string>
    <string name="dristrict_id">台区编号</string>
    <string name="user_category">用户分类</string>
    <string name="wiring">接线方式</string>
    <string name="complete_task">完成本计划</string>
    <string name="all">全部</string>
    <string name="box">计量箱/柜/屏</string>
    <string name="box_assets">箱内资产</string>
    <string name="lock">施封锁</string>
    <string name="add_new_bar_code">贴新码</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="exception">异常信息</string>
    <string name="label_bar_code">条  形  码:</string>
    <string name="label_device_type">设备类型:</string>
    <string name="label_category">类         别:</string>
    <string name="label_assets">产         权:</string>
    <string name="label_address">安装位置:</string>
    
    <string name="label_row">行数:</string>
    <string name="label_column">列数:</string>
    <string name="label_longitude">经度:</string>
    <string name="label_latitude">纬度:</string>
    <string name="btn_get">获取</string>
    <string name="survey_info">普查信息</string>
    
    <string name="submit_success_tip">本次提交了%1$s个表箱</string>
    <string name="submit_success_tip_meter">本次提交了%1$s个电表</string>
    <string name="submit_wait_tip">%1$s个表箱正在提交，请稍后!</string>
    <string name="submit_wait_tip_meter">%1$s个电表正在提交，请稍后!</string>
    <string name="no_box_to_submit_tip">没有表箱可以提交!</string>
    <string name="no_meter_to_submit_tip">没有电表可以提交!</string>
    <string name="del_box_wait_tip">%1$s个表箱正在删除，请稍后!</string>
    <string name="del_meter_wait_tip">%1$s个电表正在删除，请稍后!</string>
	<string name="no_box_to_del_tip">没有表箱可以删除!</string>
	<string name="no_meter_to_del_tip">没有电表可以删除!</string>
	<string name="del_success_tip">本次删除了%1$s个表箱</string>
	<string name="del_success_tip_meter">本次删除了%1$s个电表</string>
	<string name="gps_get_location_wait_tip">正在定位，请稍后!</string>
	<string name="gps_open_guide_tip">请开启GPS!</string>
	<string name="exception_title">请输入异常信息:</string>
	<string name="problem_title">请输入异常现象:</string>
	<string name="method_title">请输入消缺方法:</string>
	<string name="eliminate_title">请输入需要消缺的电表资产号:</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="barcode_is_null">条码不能为空!</string>
	<string name="asset_no_is_null">资产编号不能为空!</string>
	<string name="problem_is_null">异常现象不能为空!</string>
	<string name="method_is_null">消缺方法不能为空!</string>
	<string name="complete_wait_tip">正在提交数据，请稍后!</string>
	<string name="complete_sucess">提交完成!</string>
	<string name="row_or_column_is_null">请先设置好行数与列数!</string>
	<string name="block">空位</string>
	<string name="table">表格</string>
	<string name="table_name">电能表</string>
	<string name="row_index">第%1$s行</string>
	<string name="column_index">第%1$s列</string>
	<string name="input_or_scan_barcode">扫描或输入条码</string>
	<string name="input_meter_code">请输入电能表资产编号:</string>
	<string name="box_combing">台区梳理</string>
	<string name="combing_item_order">序号</string>
	<string name="combing_system_id">业务系统id</string>
	<string name="combing_address">安装位置</string>
	<string name="combing_rows">行数</string>
	<string name="combing_columns">列数</string>
	<string name="combing_meter_count">表数</string>
	<string name="combing_district_tag">台区标识</string>
	<string name="combing_district_no">台区编号</string>
	<string name="combing_box_barcode">计量箱资产编号</string>
	<string name="box_barcode">计量箱条形码</string>
	<string name="box_barcode_label">计量箱条形码:</string>
	<string name="combing_longitude">经度</string>
    <string name="combing_latitude">纬度</string>
	<string name="meter_count">表数</string>
	<string name="commit_sucess">提交成功!</string>
	<string name="save_sucess">保存成功！</string>
	<string name="new_meter">新增</string>
	<string name="get_gps">定位中</string>
	<string name="abnormal_elimination">异常消缺</string>
	<string name="phenomenon">异常现象</string>
	<string name="phenomenon_label">异常现象:</string>
	<string name="elimination_result">消缺结果</string>
	<string name="elimination_method">消缺方法</string>
	<string name="elimination_method_label">消缺方法:</string>
	<string name="no_need_elimination">这个电表不在消缺任务中！</string>
	<string name="state_untreated">未处理</string>
	<string name="state_treated">已处理</string>
	<string name="add_img">拍照</string>
	<string name="diy">自定义</string>
	<string name="can_not_creat_img_dir">请先填写电表资产号后再拍摄照片！</string>
	<string name="get_photo_sucess">拍照成功！</string>
	<string name="photo">照片</string>
	<string name="click_to_view">点击查看</string>
	<string name="operator">操作员</string>
	<string name="op_date">操作日期</string>
	<string name="op_time">操作时间</string>
</resources>
