<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="30dp"
    android:orientation="horizontal">

	<TextView 
	    android:id="@+id/order"
	    android:layout_width="70dp"
	    android:layout_height="wrap_content"
	    android:text="@string/survey_order"
	    android:textSize="12sp"
	    android:layout_gravity="center_vertical"
	    android:gravity="center"/>
	
    <View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>	
	
	<TextView 
	    android:id="@+id/box_no"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/box_asset_no"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/user_number"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/user_number"
	    android:textSize="12sp"
	    android:gravity="center"/>
	
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>	
	
	<TextView 
	    android:id="@+id/state"
	    android:layout_width="50dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/state"
	    android:textSize="12sp"
	    android:gravity="center"/>
	
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>	
            
	<TextView 
	    android:id="@+id/measure_no"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/measure_no"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>	
	
	<TextView 
	    android:id="@+id/asset_no"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/meter_asset_no"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/set_address"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/set_address"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/row_no"
	    android:layout_width="50dp"
	    android:layout_gravity="center_vertical"
	    android:layout_height="wrap_content"
	    android:text="@string/row_no"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/column_no"
	    android:layout_width="50dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/column_no"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/user_name"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/user_name"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/address"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/address"
	    android:textSize="12sp"
	    android:gravity="center"/>		
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/dristrict_id"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/dristrict_id"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/user_category"
	    android:layout_width="60dp"
	    android:layout_height="wrap_content"
	    android:text="@string/user_category"
	    android:textSize="12sp"
	    android:layout_gravity="center_vertical"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/wiring"
	    android:layout_width="60dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/wiring"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/operator"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/operator"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/op_date"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/op_date"
	    android:textSize="12sp"
	    android:gravity="center"/>	
	    
	<View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
	
	<TextView 
	    android:id="@+id/op_time"
	    android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:text="@string/op_time"
	    android:textSize="12sp"
	    android:gravity="center"/>		
			
</LinearLayout>