<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="wrap_content">

    <TextView 
        android:id="@+id/item_type"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/device_type"/>
    
    <View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
    
    <TextView 
        android:id="@+id/item_code"
        android:layout_width="120dp"
        android:layout_gravity="center_vertical"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/device_code"/>
        
    <View 
        android:layout_width="0.1dp"
        android:layout_height="match_parent"
        android:background="#66004E98"/>
    
    <TextView 
        android:id="@+id/item_time"
        android:layout_width="100dp"
        android:layout_gravity="center_vertical"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/query_date"/>
</LinearLayout>