<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#F2F1ED"
    android:layout_height="match_parent" >

    <RelativeLayout 
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#66666666"
        android:layout_above="@+id/edits">
    
        <HorizontalScrollView 
	        android:id="@+id/hs"
	        android:layout_width="match_parent"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_height="wrap_content" >
	        
	        <LinearLayout 
	 			android:layout_width="wrap_content"
	 			android:layout_height="wrap_content"
	 			android:orientation="horizontal">
	
				 <GridView
				     android:id="@+id/context_grid"
				     android:layout_width="wrap_content"
				     android:layout_height="wrap_content" />
	            
	        </LinearLayout>
	        
	    </HorizontalScrollView>
        
    </RelativeLayout>    
    
    <RelativeLayout 
        android:id="@+id/edits"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_above="@+id/bottom_btns">
        
        	<EditText 
	            android:id="@+id/user_name"
	            android:layout_marginLeft="5dp"
	            android:layout_width="100dp"
	            android:layout_alignParentLeft="true"
	            android:layout_centerHorizontal="true"
	            android:inputType="text"
	            android:textSize="13sp"
	            android:hint="@string/user_name"
	            android:layout_height="30dp"/> 
        	 
        	 <EditText 
	            android:id="@+id/use_address"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_toRightOf="@+id/user_name"
	            android:layout_alignParentRight="true"
	            android:layout_width="200dp"
	            android:layout_centerHorizontal="true"
	            android:inputType="text"
	            android:textSize="13sp"
	            android:hint="@string/address"
	            android:layout_height="30dp"/>
        
    </RelativeLayout>
 
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/bottom_btns"
        android:layout_marginBottom="-1dp"
        android:background="#66000000"/>
    
	<LinearLayout 
	    android:id="@+id/bottom_btns"
	    android:layout_width="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:gravity="center"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_height="35dp">
	    
        <TextView 
            android:id="@+id/block_btn"
            android:layout_height="30dp"
            android:layout_width="90dp"
    		android:textColor="@drawable/survey_bottom_text_color_selector"
		    android:background="@drawable/survey_bottom_left_btn_selector"
            android:gravity="center"
            android:textSize="11sp"
            android:text="@string/block"/>
        
        <TextView 
            android:id="@+id/del_btn"
            android:layout_height="30dp"
            android:layout_width="90dp"
            android:gravity="center"
            android:textColor="@drawable/survey_bottom_text_color_selector"
		    android:background="@drawable/survey_bottom_center_btn_selector"
		    android:layout_marginLeft="-1dp"
		    android:layout_marginRight="-1dp"
		    android:textSize="11sp"
            android:text="@string/del"/>
                
        <TextView 
            android:id="@+id/table_btn"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/table"
            android:visibility="gone"/>
        
        <TextView 
            android:id="@+id/back_btn"
            android:textColor="@drawable/survey_bottom_text_color_selector"
		    android:background="@drawable/survey_bottom_right_btn_selector"            
            android:layout_height="30dp"
            android:layout_width="90dp"
            android:textSize="11sp"
            android:gravity="center"
            android:text="@string/back"/>
	</LinearLayout>
	
</RelativeLayout>